--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/server.js"
+      "dest": "server.js"
     },
     {
       "src": "/",
-      "dest": "/api/health" 
+      "dest": "server.js"
     }
   ]
 }
