--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,39 @@
-# # Logs
-# logs
-# *.log
-# npm-debug.log*
-# yarn-debug.log*
-# yarn-error.log*
-# pnpm-debug.log*
-# lerna-debug.log*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# node_modules
-# dist
-# dist-ssr
-# *.local
+# Dependencies
+node_modules/
 
-# # Editor directories and files
-# .vscode/*
-# !.vscode/extensions.json
-# .idea
-# .DS_Store
-# *.suo
-# *.ntvs*
-# *.njsproj
-# *.sln
-# *.sw?
-# *.env
-# uploads
+# Build Outputs
+dist/
+dist-ssr/
+*.local
 
-node_modules
-#.vercel
+# Editor and IDE Files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment Variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Vercel
+.vercel
+
+# Application-Specific
+uploads/
